feat: Melhorando a estilização das telas de Home e Localização e implementando o mapa de localização da confeitaria

--- a/v1.0/index.html
+++ b/v1.0/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-BR">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -19,7 +19,7 @@
             <div class="hero-content">
                 <h1>Destaques da semana</h1>
                 <p>Uma série de sabores marcantes.</p>
-                <a href="menu.html" class="btn btn-light">Menu</a>
+                <a href="menu.html"  class="btn btn-light">Menu</a>
             </div>
         </section>
 
@@ -48,8 +48,8 @@
                     <div class="cookie-item">
                         <img src="/source/product-3.png" alt="Cookie 2">
                         <div class="content-text">
-                            <h3>Bolo de pote</h3>
-                            <h4>Nosso Bolo de Pote é uma sobremesa prática e deliciosa, perfeita para qualquer ocasião. Camadas generosas de bolo macio, recheio cremoso e cobertura irresistível, tudo servido em um pote individual. Ideal para saborear a qualquer hora!</h4>
+                            <h3>Bolo de festa</h3>
+                            <h4>Feito com massa fofinha, recheio cremoso e cobertura irresistível, nossos bolos de festa são preparados com ingredientes de qualidade para deixar qualquer celebração ainda mais especial. Perfeitos para todos os gostos e ocasiões! Venha conferir nosso cardápio!</h4>
                         </div>
                     </div>
                 </div>
