--- a/v1.0/footer.html
+++ b/v1.0/footer.html
@@ -2,6 +2,12 @@
     <div class="footer-content">
         <div class="footer-links">
             <div class="footer-column">
+                <h4>Início</h4>
+                <ul>
+                    <li><a href="index.html">Página Inicial</a></li>
+                </ul>
+            </div>
+            <div class="footer-column">
                 <h4>Cardápio</h4>
                 <ul>
                     <li><a href="menu.html">Nosso Cardápio</a></li>
@@ -23,14 +29,14 @@
         <div class="footer-social">
             <h4>Nos siga</h4>
             <div class="social-icons">
-                <a href="https://www.ifood.com.br/delivery/manaus-am/ariane-cakes-taruma/46e14c51-b6e4-4c28-8862-0d6ed3e9f736?utm_medium=share">
-                    <img src="/source/logo_ifood.png" alt="Ifood">
-                </a>
                 <a href="https://www.instagram.com/arianecakes.oficial" target="_blank" class="instagram-link">
                     <i class="fab fa-instagram"></i>
                 </a>
                 <a href="https://wa.me/c/559291146084" target="_blank" class="social-link">
                     <i class="fab fa-whatsapp"></i>
+                </a>
+                <a href="https://www.ifood.com.br/delivery/manaus-am/ariane-cakes-taruma/46e14c51-b6e4-4c28-8862-0d6ed3e9f736?utm_medium=share">
+                    <img src="/source/logo_ifood.png" alt="Ifood">
                 </a>
             </div>
         </div>
