fix: Corrigindo organização dos diretórios do projeto

--- a/menu.html
+++ b/menu.html
@@ -5,36 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Nosso Cardápio - Ariane Cake's</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
+
 </head>
 <body>
-    <header class="main-header">
-        <div class="header-content">
-            <div class="logo">
-                <a href="index.html">Ariane Cake's</a>
-            </div>
-            <nav class="main-nav">
-                <ul>
-                    <li><a href="menu.html">Menu</a></li>
-                    <li><a href="about.html">Sobre Nós</a></li>
-                    <li><a href="stores.html">Localização</a></li>
-                </ul>
-            </nav>
-            <div class="header-actions">
-                <button class="btn btn-primary">Order Now</button>
-                <!-- <a href="stores.html" class="icon-link">
-                    <img src="https://placehold.co/24x24/000000/FFFFFF?text=L" alt="Location Icon">
-                </a>
-                <a href="#" class="icon-link">
-                    <img src="https://placehold.co/24x24/000000/FFFFFF?text=U" alt="User Icon">
-                </a> -->
-            </div>
-            <button class="hamburger-menu">
-                <span></span>
-                <span></span>
-                <span></span>
-            </button>
-        </div>
-    </header>
+    <div id="header"></div>    
 
     <main>
         <section class="menu-page">
@@ -107,48 +82,7 @@
         </section>
     </main>
 
-    <footer class="main-footer">
-        <div class="footer-content">
-            <div class="footer-links">
-                <div class="footer-column">
-                    <h4>Cardápio</h4>
-                    <ul>
-                        <li><a href="menu.html">Nosso Cardápio</a></li>
-                    </ul>
-                </div>
-                <div class="footer-column">
-                    <h4>Empresa</h4>
-                    <ul>
-                        <li><a href="about.html">Sobre Nós</a></li>
-                    </ul>
-                </div>
-                <div class="footer-column">
-                    <h4>Mais</h4>
-                    <ul>
-                        <li><a href="stores.html">Localização</a></li>
-                    </ul>
-                </div>
-            </div>
-            <div class="footer-social">
-                <h4>Nos siga</h4>
-                <div class="social-icons">
-                    <a href="#"><img src="https://placehold.co/32x32/000000/FFFFFF?text=FB" alt="Facebook"></a>
-                    <a href="#"><img src="https://placehold.co/32x32/000000/FFFFFF?text=IG" alt="Instagram"></a>
-                    <a href="#"><img src="https://placehold.co/32x32/000000/FFFFFF?text=TW" alt="Twitter"></a>
-                </div>
-            </div>
-        </div>
-        <div class="footer-bottom">
-            <p>&copy; 2025 Ariane Cake's. Todos os direitos reservados.</p>
-        </div>
-    </footer>
-
-    <script src="script.js"></script>
-</body>
-</html>eserved.</p>
-        </div>
-    </footer>
-
+    <div id="footer"></div>
     <script src="script.js"></script>
 </body>
 </html>
