--- a/index.html
+++ b/index.html
@@ -1,71 +1,57 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-BR">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Ariane Cake's</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
+
 </head>
 <body>
-    <header class="main-header">
-        <div class="header-content">
-            <div class="logo">
-                <a href="index.html">Ariane Cake's</a>
-            </div>
-            <nav class="main-nav">
-                <ul>
-                    <li><a href="menu.html">Menu</a></li>
-                    <li><a href="about.html">Sobre Nós</a></li>
-                    <li><a href="stores.html">Localização</a></li>
-                </ul>
-            </nav>
-            <div class="header-actions">
-                <button class="btn btn-primary">Order Now</button>
-                <!-- <a href="stores.html" class="icon-link">
-                    <img src="https://placehold.co/24x24/000000/FFFFFF?text=L" alt="Location Icon">
-                </a>
-                <a href="#" class="icon-link">
-                    <img src="https://placehold.co/24x24/000000/FFFFFF?text=U" alt="User Icon">
-                </a> -->
-            </div>
-            <button class="hamburger-menu">
-                <span></span>
-                <span></span>
-                <span></span>
-            </button>
-        </div>
-    </header>
+    <div id="header"></div>
 
     <main>
         <section class="hero">
             <div class="hero-video-wrapper">
-                <img src="https://placehold.co/1920x1080/EAD9F2/333333?text=Hero+Video/Image" alt="Hero background" class="hero-background">
+                <img src="/source/Apresentação Ariane Cakes_page-0002.jpg" alt="Hero background" class="hero-background">
             </div>
             <div class="hero-content">
                 <h1>Destaques da semana</h1>
                 <p>Uma série de sabores marcantes.</p>
-                <button class="btn btn-light">Menu</button>
+                <a href="menu.html"  class="btn btn-light">Menu</a>
             </div>
         </section>
 
         <section class="weekly-cookies">
             <h2>Mais vendidos</h2>
             <div class="cookies-grid">
-                <div class="cookie-item">
-                    <img src="https://placehold.co/400x400/FADADD/333?text=Cookie+1" alt="Cookie 1">
-                    <h3>Morango do amor</h3>
+                <div class="div-position">
+                    <div class="cookie-item">
+                        <img src="/source/product-1.png" alt="Cookie 1">
+                        <div class="content-text">
+                            <h3>Copo da felicidade</h3>
+                            <h4>Esse Copo da Felicidade é uma sobremesa irresistível montada em camadas: pedaços de morango fresco, chantilly cremoso, bolo de chocolate fofinho e creme doce, finalizado com chantilly no topo. Uma combinação deliciosa de sabores e texturas em um só copo.</h4>
+                        </div>
+                    </div>
                 </div>
-                <div class="cookie-item">
-                    <img src="https://placehold.co/400x400/FADADD/333?text=Cookie+2" alt="Cookie 2">
-                    <h3>Copo da felicidade(Brownie)<h3>
+                <div class="div-position2">
+                    <div class="cookie-item">
+                        <div class="content-text">
+                            <h3>Bolo de pote</h3>
+                            <h4>Nosso Bolo de Pote é uma sobremesa prática e deliciosa, perfeita para qualquer ocasião. Camadas generosas de bolo macio, recheio cremoso e cobertura irresistível, tudo servido em um pote individual. Ideal para saborear a qualquer hora!</h4>
+                        </div>
+                        <img src="/source/product-2.png" alt="Cookie 2">
+                    </div>
                 </div>
-                <div class="cookie-item">
-                    <img src="https://placehold.co/400x400/FADADD/333?text=Cookie+3" alt="Cookie 3">
-                    <h3>Bolo de pote(Ninho)</h3>
-                </div>
-                <div class="cookie-item">
-                    <img src="https://placehold.co/400x400/FADADD/333?text=Cookie+4" alt="Cookie 4">
-                    <h3>Tortas(Cupuaçu)</h3>
+                <div class="div-position">
+                    <div class="cookie-item">
+                        <img src="/source/product-3.png" alt="Cookie 2">
+                        <div class="content-text">
+                            <h3>Bolo de festa</h3>
+                            <h4>Feito com massa fofinha, recheio cremoso e cobertura irresistível, nossos bolos de festa são preparados com ingredientes de qualidade para deixar qualquer celebração ainda mais especial. Perfeitos para todos os gostos e ocasiões! Venha conferir nosso cardápio!</h4>
+                        </div>
+                    </div>
                 </div>
             </div>
         </section>
@@ -73,54 +59,19 @@
         <section class="info-section">
             <div class="info-content">
                 <div class="info-image">
-                    <img src="https://placehold.co/600x400/EAEAEA/333?text=More+Than+Cookies" alt="More than just cookies">
+                    <img src="/source/bolo de pote mockup 2.png" alt="More than just cookies">
                 </div>
                 <div class="info-text">
                     <h2>Mais que apenas doces.</h2>
                     <p>De pequenas delícias a grandes momentos, queremos deixar sua vida mais doce.</p>
-                    <button class="btn btn-outline">Saber mais</button>
+                    <a href="menu.html" class="btn btn-outline">Saber mais</a>
                 </div>
             </div>
         </section>
 
     </main>
 
-    <footer class="main-footer">
-        <div class="footer-content">
-            <div class="footer-links">
-                <div class="footer-column">
-                    <h4>Cardápio</h4>
-                    <ul>
-                        <li><a href="menu.html">Nosso Cardápio</a></li>
-                    </ul>
-                </div>
-                <div class="footer-column">
-                    <h4>Empresa</h4>
-                    <ul>
-                        <li><a href="about.html">Sobre Nós</a></li>
-                    </ul>
-                </div>
-                <div class="footer-column">
-                    <h4>Mais</h4>
-                    <ul>
-                        <li><a href="stores.html">Localização</a></li>
-                    </ul>
-                </div>
-            </div>
-            <div class="footer-social">
-                <h4>Nos siga</h4>
-                <div class="social-icons">
-                    <a href="#"><img src="https://placehold.co/32x32/000000/FFFFFF?text=FB" alt="Facebook"></a>
-                    <a href="#"><img src="https://placehold.co/32x32/000000/FFFFFF?text=IG" alt="Instagram"></a>
-                    <a href="#"><img src="https://placehold.co/32x32/000000/FFFFFF?text=TW" alt="Twitter"></a>
-                </div>
-            </div>
-        </div>
-        <div class="footer-bottom">
-            <p>&copy; 2025 Ariane Cake's. Todos os direitos reservados.</p>
-        </div>
-    </footer>
-
+    <div id="footer"></div>
     <script src="script.js"></script>
 </body>
 </html>>
