--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -8,18 +9,20 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
 
 </head>
+
 <body>
     <div id="header"></div>
 
     <main>
         <section class="hero">
             <div class="hero-video-wrapper">
-                <img src="/source/Apresentação Ariane Cakes_page-0002.jpg" alt="Hero background" class="hero-background">
+                <img src="/source/Apresentação Ariane Cakes_page-0002.jpg" alt="Hero background"
+                    class="hero-background">
             </div>
             <div class="hero-content">
                 <h1>Destaques da semana</h1>
                 <p>Uma série de sabores marcantes.</p>
-                <a href="menu.html"  class="btn btn-light">Menu</a>
+                <a href="menu.html" class="btn btn-light">Menu</a>
             </div>
         </section>
 
@@ -31,7 +34,10 @@
                         <img src="/source/product-1.png" alt="Cookie 1">
                         <div class="content-text">
                             <h3>Copo da felicidade</h3>
-                            <h4>Esse Copo da Felicidade é uma sobremesa irresistível montada em camadas: pedaços de morango fresco, chantilly cremoso, bolo de chocolate fofinho e creme doce, finalizado com chantilly no topo. Uma combinação deliciosa de sabores e texturas em um só copo.</h4>
+                            <h4>Esse Copo da Felicidade é uma sobremesa irresistível montada em camadas: pedaços de
+                                morango fresco, chantilly cremoso, bolo de chocolate fofinho e creme doce, finalizado
+                                com chantilly no topo. Uma combinação deliciosa de sabores e texturas em um só copo.
+                            </h4>
                         </div>
                     </div>
                 </div>
@@ -39,7 +45,9 @@
                     <div class="cookie-item">
                         <div class="content-text">
                             <h3>Bolo de pote</h3>
-                            <h4>Nosso Bolo de Pote é uma sobremesa prática e deliciosa, perfeita para qualquer ocasião. Camadas generosas de bolo macio, recheio cremoso e cobertura irresistível, tudo servido em um pote individual. Ideal para saborear a qualquer hora!</h4>
+                            <h4>Nosso Bolo de Pote é uma sobremesa prática e deliciosa, perfeita para qualquer ocasião.
+                                Camadas generosas de bolo macio, recheio cremoso e cobertura irresistível, tudo servido
+                                em um pote individual. Ideal para saborear a qualquer hora!</h4>
                         </div>
                         <img src="/source/product-2.png" alt="Cookie 2">
                     </div>
@@ -49,7 +57,9 @@
                         <img src="/source/product-3.png" alt="Cookie 2">
                         <div class="content-text">
                             <h3>Bolo de festa</h3>
-                            <h4>Feito com massa fofinha, recheio cremoso e cobertura irresistível, nossos bolos de festa são preparados com ingredientes de qualidade para deixar qualquer celebração ainda mais especial. Perfeitos para todos os gostos e ocasiões! Venha conferir nosso cardápio!</h4>
+                            <h4>Feito com massa fofinha, recheio cremoso e cobertura irresistível, nossos bolos de festa
+                                são preparados com ingredientes de qualidade para deixar qualquer celebração ainda mais
+                                especial. Perfeitos para todos os gostos e ocasiões! Venha conferir nosso cardápio!</h4>
                         </div>
                     </div>
                 </div>
@@ -68,10 +78,10 @@
                 </div>
             </div>
         </section>
-
     </main>
 
     <div id="footer"></div>
     <script src="script.js"></script>
 </body>
-</html>>
+
+</html>
