--- a/menu.html
+++ b/menu.html
@@ -1,88 +1,141 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Nosso Cardápio - Ariane Cake's</title>
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
-
 </head>
+
 <body>
-    <div id="header"></div>    
+    <div id="header"></div>
 
     <main>
-        <section class="menu-page">
-            <div class="menu-header">
-                <h1>Menu</h1>
-                <p>Our award-winning cookies are delivered fresh to your door.</p>
+        <section>
+            <div class="banner">
+                <link href="https://fonts.googleapis.com/css2?family=Pacifico&display=swap" rel="stylesheet">
+                <h1>Bem-vindo ao Nosso Menu</h1>
             </div>
+            <div class="imagem-fundo"></div>
+        </section>
 
+        <section>
             <div class="weekly-cookies">
-                <h2>This Week's Lineup</h2>
                 <div class="cookies-grid">
-                    <div class="cookie-item-detailed">
-                        <img src="./source/Bolo de festa.jpeg" alt="Bolo de festa">
-                        <h3>Bolo de festa</h3>
-                        <p class="cookie-description">A huge, warm, and delicious cookie packed with giant semi-sweet chocolate chunks.</p>
+                    <div class="cookie-item cookies5">
+                        <div class="cookie-image">
+                            <img src="source/bolo chocolate.png" alt="Cookie 5">
+                        </div>
+                        <div class="cookie-text">
+                            <h3>BOLOS</h3>
+                            <p>Sabor que desperta memórias, aroma que conquista e textura que derrete na boca.
+                                Nossos bolos são feitos com ingredientes selecionados, receitas exclusivas e um toque
+                                artesanal que faz toda diferença.</p>
+                            <a href="https://wa.me/559299146084?text=Ol%C3%A1%2C%20tenho%20uma%20d%C3%BAvida%20sobre%20o%20site."
+                                target="_blank">
+                                <button class="btn-pedido">PEDIDO</button>
+                            </a>
+                        </div>
                     </div>
-                    <div class="cookie-item-detailed">
-                        <img src="./source/bolo de pote.jpeg" alt="Bolo de pote">
-                        <h3>Bolo de pote</h3>
-                        <p class="cookie-description">A vanilla sugar cookie topped with a perfect pink swirl of almond frosting. A classic!</p>
+                    <div class="cookie-item cookies6">
+                        <div class="cookie-image">
+                            <img src="source/kit1.png" alt="Cookie 6">
+                        </div>
+                        <div class="cookie-text">
+                            <h3>KITS PARA FESTA</h3>
+                            <p>Celebre com praticidade, estilo e muito sabor!
+                                Nossos kits para festa foram criados para transformar qualquer ocasião em um momento
+                                inesquecível, sem dor de cabeça.</p>
+                            <a href="https://wa.me/559299146084?text=Ol%C3%A1%2C%20tenho%20uma%20d%C3%BAvida%20sobre%20o%20site."
+                                target="_blank">
+                                <button class="btn-pedido">PEDIDO</button>
+                            </a>
+                        </div>
                     </div>
-                    <div class="cookie-item-detailed">
-                        <img src="./source/Bolo.jpeg" alt="Classic Cake">
-                        <h3>Classic Cake</h3>
-                        <p class="cookie-description">A warm peanut butter cookie with a classic criss-cross pattern on top. Simple and perfect.</p>
+                    <div class="cookie-item cookies7">
+                        <div class="cookie-image">
+                            <img src="source/bolo confeitado maior.png" alt="Cookie 7">
+                        </div>
+                        <div class="cookie-text">
+                            <h3>BOLOS DE ANIVERSARIO</h3>
+                            <p>Celebre a vida com sabor, beleza e emoção em cada fatia!
+                                Nossos bolos de aniversário são verdadeiras obras de arte comestíveis feitos com
+                                ingredientes de alta qualidade, recheios cremosos e decorações que impressiona qualquer
+                                um.
+                            </p>
+                            <a href="https://wa.me/559299146084?text=Ol%C3%A1%2C%20tenho%20uma%20d%C3%BAvida%20sobre%20o%20site."
+                                target="_blank">
+                                <button class="btn-pedido">PEDIDO</button>
+                            </a>
+                        </div>
                     </div>
-                    <div class="cookie-item-detailed">
-                        <img src="./source/morango do amor.jpeg" alt="Morango do amor">
-                        <h3>Morango do amor<html lang="en">
-                        <head>
-                            <meta charset="UTF-8">
-                            <meta name="viewport" content="width=device-width, initial-scale=1.0">
-                            <title>Document</title>
-                        </head>
-                        <body>
-                            
-                        </body>
-                        </html></h3>
-                        <p class="cookie-description">Check your local store's menu to see what surprising flavor is available this week!</p>
+                    <div class="cookie-item cookies8">
+                        <div class="cookie-image">
+                            <img src="source/torta2.png" alt="Cookie 8">
+                        </div>
+                        <div class="cookie-text">
+                            <h3>DIVERSAS TORTAS</h3>
+                            <p>Elegância em forma de sabor!
+                                Nossas tortas são preparadas artesanalmente, com ingredientes selecionados e combinações
+                                que
+                                conquistam à primeira mordida.</p>
+                            <a href="https://wa.me/559299146084?text=Ol%C3%A1%2C%20tenho%20uma%20d%C3%BAvida%20sobre%20o%20site."
+                                target="_blank">
+                                <button class="btn-pedido">PEDIDO</button>
+                            </a>
+                        </div>
+                    </div>
+                    <div class="cookie-item cookies9">
+                        <div class="cookie-image">
+                            <img src="source/bolo de pote mockup 2.png" alt="Cookie 9">
+                        </div>
+                        <div class="cookie-text">
+                            <h3>KITS COM TORTAS</h3>
+                            <p>Comemorar ficou muito mais fácil e delicioso!
+                                Nossos kits com torta foram criados para quem busca praticidade sem abrir mão do sabor e
+                                da
+                                elegância. Acompanhamentos selecionados e uma apresentação impecável que transforma
+                                qualquer
+                                ocasião em um momento especial.</p>
+                            <a href="https://wa.me/559299146084?text=Ol%C3%A1%2C%20tenho%20uma%20d%C3%BAvida%20sobre%20o%20site."
+                                target="_blank">
+                                <button class="btn-pedido">PEDIDO</button>
+                            </a>
+                        </div>
                     </div>
                 </div>
             </div>
+        </section>
 
-            <div class="weekly-cookies">
-                <h2>More to Explore</h2>
-                <div class="cookies-grid">
-                    <div class="cookie-item-detailed">
-                        <img src="https://placehold.co/400x400/EAEAEA/333?text=Cookie+5" alt="Cookie 5">
-                        <h3>Molten Lava</h3>
-                        <p class="cookie-description">A rich, dark chocolate cookie oozing with hot fudge and dusted with powdered sugar.</p>
-                    </div>
-                    <div class="cookie-item-detailed">
-                        <img src="https://placehold.co/400x400/EAEAEA/333?text=Cookie+6" alt="Cookie 6">
-                        <h3>Key Lime Pie</h3>
-                        <p class="cookie-description">A graham cracker cookie with a bright key lime pie filling and a dollop of whipped cream.</p>
-                    </div>
-                    <div class="cookie-item-detailed">
-                        <img src="https://placehold.co/400x400/EAEAEA/333?text=Cookie+7" alt="Cookie 7">
-                        <h3>Waffle</h3>
-                        <p class="cookie-description">A waffle-flavored cookie topped with a dollop of buttercream frosting and a drizzle of maple syrup.</p>
-                    </div>
-                    <div class="cookie-item-detailed">
-                        <img src="https://placehold.co/400x400/EAEAEA/333?text=Cookie+8" alt="Cookie 8">
-                        <h3>Red Velvet Cream Cheese</h3>
-                        <p class="cookie-description">A delicious red velvet cookie topped with a swirl of cream cheese frosting and white chocolate curls.</p>
-                    </div>
+        <section class="gallery-section">
+            <div class="gallery-grid">
+                <div class="gallery-item item-1">
+                    <img src="source/Galeria3.jpeg" alt="foto1">
+                </div>
+                <div class="gallery-item item-2">
+                    <img src="source/Galeria2.jpeg" alt="foto2">
+                </div>
+                <div class="gallery-item item-3">
+                    <img src="source/Galeria6.jpeg" alt="foto3">
+                </div>
+                <div class="gallery-item item-4">
+                    <img src="source/Galeria5.jpeg" alt="foto4">
+                </div>
+                <div class="gallery-item item-5">
+                    <img src="source/Galeria4.jpeg" alt="foto5">
+                </div>
+                <div class="gallery-item item-6">
+                    <img src="source/Galeria1.jpeg" alt="foto6">
                 </div>
             </div>
-
         </section>
     </main>
+
 
     <div id="footer"></div>
     <script src="script.js"></script>
 </body>
+
 </html>
