--- a/menu.html
+++ b/menu.html
@@ -30,9 +30,7 @@
                         </div>
                         <div class="cookie-text">
                             <h3>BOLOS</h3>
-                            <p>Sabor que desperta memórias, aroma que conquista e textura que derrete na boca.
-                                Nossos bolos são feitos com ingredientes selecionados, receitas exclusivas e um toque
-                                artesanal que faz toda diferença.</p>
+                            <p>Sabor que desperta memórias, aroma que conquista e textura que derrete na boca. Nossos bolos são feitos com ingredientes selecionados, receitas exclusivas e um toque artesanal que faz toda diferença.</p>
                             <a href="https://wa.me/559299146084?text=Ol%C3%A1%2C%20tenho%20uma%20d%C3%BAvida%20sobre%20o%20site."
                                 target="_blank">
                                 <button class="btn-pedido">PEDIDO</button>
@@ -40,18 +38,17 @@
                         </div>
                     </div>
                     <div class="cookie-item cookies6">
-                        <div class="cookie-image">
-                            <img src="source/kit1.png" alt="Cookie 6">
-                        </div>
                         <div class="cookie-text">
                             <h3>KITS PARA FESTA</h3>
                             <p>Celebre com praticidade, estilo e muito sabor!
-                                Nossos kits para festa foram criados para transformar qualquer ocasião em um momento
-                                inesquecível, sem dor de cabeça.</p>
+                                Nossos kits para festa foram criados para transformar qualquer ocasião em um momento inesquecível, sem dor de cabeça.</p>
                             <a href="https://wa.me/559299146084?text=Ol%C3%A1%2C%20tenho%20uma%20d%C3%BAvida%20sobre%20o%20site."
                                 target="_blank">
                                 <button class="btn-pedido">PEDIDO</button>
                             </a>
+                        </div>
+                    <div class="cookie-image">
+                            <img src="source/kit1.png" alt="Cookie 6">
                         </div>
                     </div>
                     <div class="cookie-item cookies7">
@@ -60,10 +57,8 @@
                         </div>
                         <div class="cookie-text">
                             <h3>BOLOS DE ANIVERSARIO</h3>
-                            <p>Celebre a vida com sabor, beleza e emoção em cada fatia!
-                                Nossos bolos de aniversário são verdadeiras obras de arte comestíveis feitos com
-                                ingredientes de alta qualidade, recheios cremosos e decorações que impressiona qualquer
-                                um.
+                            <p>Celebre a vida com sabor, beleza e emoção em cada fatia! Nossos bolos de aniversário são verdadeiras obras de arte comestíveis feitos com
+                                ingredientes de alta qualidade, recheios cremosos e decorações que impressiona qualquer um.
                             </p>
                             <a href="https://wa.me/559299146084?text=Ol%C3%A1%2C%20tenho%20uma%20d%C3%BAvida%20sobre%20o%20site."
                                 target="_blank">
@@ -72,21 +67,19 @@
                         </div>
                     </div>
                     <div class="cookie-item cookies8">
-                        <div class="cookie-image">
-                            <img src="source/torta2.png" alt="Cookie 8">
-                        </div>
                         <div class="cookie-text">
                             <h3>DIVERSAS TORTAS</h3>
-                            <p>Elegância em forma de sabor!
-                                Nossas tortas são preparadas artesanalmente, com ingredientes selecionados e combinações
-                                que
-                                conquistam à primeira mordida.</p>
+                                <p>Elegância em forma de sabor!
+                                    Nossas tortas são preparadas artesanalmente, com ingredientes selecionados e combinações que conquistam à primeira mordida.</p>
                             <a href="https://wa.me/559299146084?text=Ol%C3%A1%2C%20tenho%20uma%20d%C3%BAvida%20sobre%20o%20site."
                                 target="_blank">
                                 <button class="btn-pedido">PEDIDO</button>
                             </a>
                         </div>
-                    </div>
+                                <div class="cookie-image">
+                                    <img src="source/torta2.png" alt="Cookie 8">
+                                </div>
+                            </div>
                     <div class="cookie-item cookies9">
                         <div class="cookie-image">
                             <img src="source/bolo de pote mockup 2.png" alt="Cookie 9">
@@ -94,10 +87,7 @@
                         <div class="cookie-text">
                             <h3>KITS COM TORTAS</h3>
                             <p>Comemorar ficou muito mais fácil e delicioso!
-                                Nossos kits com torta foram criados para quem busca praticidade sem abrir mão do sabor e
-                                da
-                                elegância. Acompanhamentos selecionados e uma apresentação impecável que transforma
-                                qualquer
+                                Nossos kits com torta foram criados para quem busca praticidade sem abrir mão do sabor e da elegância. Acompanhamentos selecionados e uma apresentação impecável que transforma qualquer
                                 ocasião em um momento especial.</p>
                             <a href="https://wa.me/559299146084?text=Ol%C3%A1%2C%20tenho%20uma%20d%C3%BAvida%20sobre%20o%20site."
                                 target="_blank">
