--- a/footer.html
+++ b/footer.html
@@ -36,7 +36,7 @@
                     <i class="fab fa-whatsapp"></i>
                 </a>
                 <a href="https://www.ifood.com.br/delivery/manaus-am/ariane-cakes-taruma/46e14c51-b6e4-4c28-8862-0d6ed3e9f736?utm_medium=share">
-                    <img src="/source/logo_ifood.png" alt="Ifood">
+                    <img src="source/logo_ifood.png" alt="Ifood">
                 </a>
             </div>
         </div>
