--- a/header.html
+++ b/header.html
@@ -2,7 +2,7 @@
     <div class="header-content">
         <div class="logo">
             <a href="index.html">
-                <img src="/source/logo.png" class="logo-header" alt="Ariane Cake's Logo">
+                <img src="source/logo.png" class="logo-header" alt="Ariane Cake's Logo">
             </a>
         </div>
         <nav class="main-nav">
@@ -21,7 +21,7 @@
                 <i class="fab fa-whatsapp"></i>
             </a>
             <a href="https://www.ifood.com.br/delivery/manaus-am/ariane-cakes-taruma/46e14c51-b6e4-4c28-8862-0d6ed3e9f736?utm_medium=share" target="_blank" class="social-link">
-                <img src="/source/ifood.svg" alt="iFood" class="icon-ifood">
+                <img src="source/ifood.svg" alt="iFood" class="icon-ifood">
             </a>
         </div>
     </div>
