fix: Corrigindo renderização das imagens da home, footer e header

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <main>
         <section class="hero">
             <div class="hero-video-wrapper">
-                <img src="/source/Apresentação Ariane Cakes_page-0002.jpg" alt="Hero background"
+                <img src="source/Apresentação Ariane Cakes_page-0002.jpg" alt="Hero background"
                     class="hero-background">
             </div>
             <div class="hero-content">
@@ -31,7 +31,7 @@
             <div class="cookies-grid">
                 <div class="div-position">
                     <div class="cookie-item">
-                        <img src="/source/product-1.png" alt="Cookie 1">
+                        <img src="source/product-1.png" alt="Cookie 1">
                         <div class="content-text">
                             <h3>Copo da felicidade</h3>
                             <h4>Esse Copo da Felicidade é uma sobremesa irresistível montada em camadas: pedaços de
@@ -49,12 +49,12 @@
                                 Camadas generosas de bolo macio, recheio cremoso e cobertura irresistível, tudo servido
                                 em um pote individual. Ideal para saborear a qualquer hora!</h4>
                         </div>
-                        <img src="/source/product-2.png" alt="Cookie 2">
+                        <img src="source/product-2.png" alt="Cookie 2">
                     </div>
                 </div>
                 <div class="div-position">
                     <div class="cookie-item">
-                        <img src="/source/product-3.png" alt="Cookie 2">
+                        <img src="source/product-3.png" alt="Cookie 2">
                         <div class="content-text">
                             <h3>Bolo de festa</h3>
                             <h4>Feito com massa fofinha, recheio cremoso e cobertura irresistível, nossos bolos de festa
@@ -69,7 +69,7 @@
         <section class="info-section">
             <div class="info-content">
                 <div class="info-image">
-                    <img src="/source/bolo de pote mockup 2.png" alt="More than just cookies">
+                    <img src="source/bolo de pote mockup 2.png" alt="More than just cookies">
                 </div>
                 <div class="info-text">
                     <h2>Mais que apenas doces.</h2>
