fix: fianlizando o merge e já ajustando ultimos detalhes até a reunião

--- a/stores.html
+++ b/stores.html
@@ -15,6 +15,7 @@
             <div class="store-finder-content">
                 <h1>Como chegar</h1>                
             </div>
+            <div class="textura-fundo"></div>
 
             <div class="map-container" style="display:flex;gap:24px;align-items:flex-start;flex-wrap:wrap;">
                 <aside class="store-card" style="flex:1 1 360px;max-width:420px;background:#fff;padding:20px;border-radius:12px;box-shadow:0 6px 18px rgba(0,0,0,0.08);">
