--- a/about.html
+++ b/about.html
@@ -17,6 +17,7 @@
             <div class="about-header">
                 <h1>Historia</h1>
             </div>
+            <div class="textura-fundo"></div>
         </section>
 
         <section>
